--- a/GroupAssignment/appsettings.json
+++ b/GroupAssignment/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=app.db"
+    "DefaultConnection": "Data Source=..\\app.db"
   },
   "AllowedHosts": "*"
 }
